Data scripts load from AWS

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -34,14 +34,14 @@
 </script>
 
 <!-- Data Scripts -->
-<script type="text/javascript" src="home-comments.js"></script>
-<script type="text/javascript" src="home-messages.js"></script>
-<script type="text/javascript" src="home-showcase.js"></script>
-<script type="text/javascript" src="home-tooltip.js"></script>
+<script type="text/javascript" src="{{ url.data }}home-comments.js"></script>
+<script type="text/javascript" src="{{ url.data }}home-messages.js"></script>
+<script type="text/javascript" src="{{ url.data }}home-showcase.js"></script>
+<script type="text/javascript" src="{{ url.data }}home-tooltip.js"></script>
 <!-- Scripts por herencia -->
 <!-- JQuery Carousel -->
-<script type="text/javascript" src="/js/jquery.tinycarousel.js"></script>
-<script type="text/javascript" src="/js/jquery.colorbox.js"></script>
+<script type="text/javascript" src="{{ url.data }}/js/jquery.tinycarousel.js"></script>
+<script type="text/javascript" src="{{ url.data }}/js/jquery.colorbox.js"></script>
 
 <script type="text/javascript">
 
