load js from remote for now

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -40,8 +40,8 @@
 <script type="text/javascript" src="{{ url.data }}home-tooltip.js"></script>
 <!-- Scripts por herencia -->
 <!-- JQuery Carousel -->
-<script type="text/javascript" src="{{ url.data }}/js/jquery.tinycarousel.js"></script>
-<script type="text/javascript" src="{{ url.data }}/js/jquery.colorbox.js"></script>
+<script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
+<script type="text/javascript" src="{{ url.data }}js/jquery.colorbox.js"></script>
 
 <script type="text/javascript">
 
