--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -38,7 +38,8 @@
 <script type="text/javascript" src="{{ url.data }}home-messages.js"></script>
 <script type="text/javascript" src="{{ url.data }}home-showcase.js"></script>
 <script type="text/javascript" src="{{ url.data }}home-tooltip.js"></script>
-<!-- Scripts por herencia -->
+<!-- Site scripts -->
+<script type="text/javascript" src="{{ url.data }}js/cart.js"></script>
 <!-- JQuery Carousel -->
 <script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
 <script type="text/javascript" src="{{ url.data }}js/jquery.colorbox.js"></script>
