Update cart on page load

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -1,8 +1,12 @@
 <!-- Scripts -->
 <script type="text/javascript"
         src="/js/jquery-1.4.2.min.js"></script>
+<!-- Site scripts -->
+<script type="text/javascript" src="{{ url.data }}js/cart.js"></script>
 
 <script type="text/javascript">
+
+    carrito_ActualizarCarrito();
 
     {% include "fragments/app.js" %} /* Main Application */
 
@@ -38,8 +42,6 @@
 <script type="text/javascript" src="{{ url.data }}home-messages.js"></script>
 <script type="text/javascript" src="{{ url.data }}home-showcase.js"></script>
 <script type="text/javascript" src="{{ url.data }}home-tooltip.js"></script>
-<!-- Site scripts -->
-<script type="text/javascript" src="{{ url.data }}js/cart.js"></script>
 <!-- JQuery Carousel -->
 <script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
 <script type="text/javascript" src="{{ url.data }}js/jquery.colorbox.js"></script>
