--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -8,8 +8,8 @@
 
 {% block canvas_content -%}
     <div id="seccionTematika">
-        <div id="product-gallery">
-            {% include "fragments/product_gallery.html" %}
+        <div id="showcase">
+            {% include "home/gallery.html" %}
         </div>
         <div id="comments">
 {# DISABLED WAITING FOR DATASET
