--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -1,8 +1,9 @@
 {% extends "page.html" %}
 
 {% block head_extra %}
-    <style type="text/css; charsert=utf-8">
+    <style type="text/css">
         {% include "home/styles.css" %}
+        {% include "home/tinycarousel.css" %}
     </style>
 {% endblock %}
 
