--- a/content/templates/macros/tooltip.html
+++ b/content/templates/macros/tooltip.html
@@ -7,7 +7,7 @@
 			<tr>
 				<td valign="top">
 					<a id="linkDetalleImagen" href=""><img id="urlImagen"
-                    class="globoArticuloTapa" src="{{ url.images ~ "/tapas/sitio" ~ product.CoverSmall|escape }}" alt="" /></a>	
+                    class="globoArticuloTapa" src="{{ url.images ~ product.SmallCover|escape }}" alt="" /></a>	
 				</td>
 				<td>
 					<table>
