--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -2,7 +2,7 @@
 <div class="viewport">
 	<ul class="overview">
 	{%- for product in product_list -%}
-			{%- if ((loop.index + 1) % cols) == 0 -%} {# odd #}
+			{%- if not loop.index is divisibleby cols -%}
 			    <li>
 			    <table>	
 				    <tr>
@@ -14,13 +14,13 @@
 							<img src="{{ url.images ~ product.CoverSmall|escape }}" width="98" alt="{{ product.Title.decode('utf-8')}}">
 						</a>
 					</td>
-			{%- if not ((loop.index + 1) % cols) == 0 -%} {# not odd #}
+	        {%- if loop.index is divisibleby cols -%}
 				    </tr>
 			    </table>
 			    </li>
 			{%- endif %}
 	{%- endfor %}
-	{%- if not loop.index is odd -%}
+	{%- if loop.index is divisibleby cols -%}
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>	
 			</tr>
