--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -20,7 +20,8 @@
 			    </li>
 			{%- endif %}
 	{%- endfor %}
-	{%- if not loop.index is divisibleby cols -%} {# fill remaining cols #}
+	{%- if loop.index is divisibleby cols -%}
+        {#- fill remaining cols -#}
         {%- for c in range(cols - (loop.index % cols)) -%}
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>	
